<resources>
    <string name="app_name">Login App</string>

    <string name="no_internet_connection">No Internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="empty_phone_number_error">Empty Phone Number</string>
    <string name="phone_number_too_short_error">Phone Number too Short</string>
    <string name="phone_code_missed_plus_symbol_error">Missed Plus symbol in Phone Code</string>
    <string name="empty_password_error">Empty Password</string>
    <string name="password_too_short_error">Password should contain at least 4 symbols</string>
    <string name="invalid_phone_number_error">Invalid Phone Number</string>
    <string name="login_error">Login Error</string>

    <string name="sign_in">Sign in</string>
    <string name="profile_label">Profile</string>
    <string name="tips_text">TIPS</string>
    <string name="continue_btm_text">Continue</string>

    <string name="phone_number_hint">Phone number</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="password_hint">Password</string>


</resources>