<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".homescreen.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/primary"
        android:elevation="@dimen/elevation"
        android:gravity="center_vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>


    <TextView
        android:id="@+id/profile_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/elements_margin_top"
        android:text="@string/tips_text"
        android:textColor="@color/text2"
        android:textSize="@dimen/tips_text_size"
        app:layout_constraintBottom_toTopOf="@+id/surname_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_toolbar" />

    <ImageView
        android:id="@+id/ic_first_name"
        android:layout_width="@dimen/icons_width"
        android:layout_height="0dp"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toBottomOf="@+id/surname_tv"
        app:layout_constraintEnd_toStartOf="@+id/start_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/surname_hint" />

    <TextView
        android:id="@+id/surname_hint"
        style="@style/ProfileHints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/surname_hint"
        app:layout_constraintBottom_toTopOf="@+id/surname_tv"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline" />

    <TextView
        android:id="@+id/surname_tv"
        style="@style/ProfileFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/profile_tv"
        tools:text="Doe" />

    <ImageView
        android:id="@+id/ic_last_name"
        android:layout_width="@dimen/icons_width"
        android:layout_height="0dp"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toBottomOf="@+id/name_tv"
        app:layout_constraintEnd_toStartOf="@+id/start_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_hint" />

    <TextView
        android:id="@+id/name_hint"
        style="@style/ProfileHints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        app:layout_constraintBottom_toTopOf="@+id/name_tv"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline" />

    <TextView
        android:id="@+id/name_tv"
        style="@style/ProfileFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/phone_number_tv"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/surname_tv"
        tools:text="John" />

    <ImageView
        android:id="@+id/ic_phone"
        android:layout_width="@dimen/icons_width"
        android:layout_height="0dp"
        android:src="@drawable/ic_phone"
        app:layout_constraintBottom_toBottomOf="@+id/phone_number_tv"
        app:layout_constraintEnd_toStartOf="@+id/start_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phone_number_hint" />

    <TextView
        android:id="@+id/phone_number_hint"
        style="@style/ProfileHints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_hint"
        app:layout_constraintBottom_toTopOf="@+id/phone_number_tv"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline" />

    <TextView
        android:id="@+id/phone_number_tv"
        style="@style/ProfileFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/name_tv"
        tools:text="+380671112233" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>